--- a/websites/React/IntroReact/react-project-one/package.json
+++ b/websites/React/IntroReact/react-project-one/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -26,8 +29,5 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "vite": "npm:rolldown-vite@^7.2.5"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
   }
 }
